fix overflow x

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -118,3 +118,10 @@ body {
   ion-icon {
     font-size: 1.5rem;
   }
+
+
+  @media (max-width: 800px) {
+    html, body {
+    overflow-x: hidden;
+    }
+  }
